# git-notes-memory-manager

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Claude-Code-Plugins.code-workspace  Makefile  README.md  REMEDIATION_REPORT.md  marketplace.json  plugin.json  pyproject.toml
.claude/: hooks.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
commands/: audit-log.md  capture.md  health.md  metrics.md  recall.md  review.md  scan-secrets.md  search.md  secrets-allowlist.md  status.md  sync.md  test-secret.md  traces.md  validate.md
docker/: docker-compose.yml  loki.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
docker/grafana/dashboards/: hook-performance.json  logs.json  memory-operations.json  observability-overview.json  subconsciousness.json  traces.json
docker/grafana/provisioning/dashboards/: dashboards.yaml
docker/grafana/provisioning/datasources/: datasources.yaml
docs/: DEVELOPER_GUIDE.md  ENV.md  SUBCONSCIOUSNESS.md  USER_GUIDE.md  claude-code-hooks-reference.md  lifecycle.md  observability.md
docs/research/: RESEARCH_NOTES.md  RESEARCH_PLAN.md  RESEARCH_REPORT.md
docs/research/CognitiveSubstrate/: ARCHITECTURE_BRIEF.md  REFERENCES.md  memory-consolidation-requirements.md  memory-consolidation-spec.md
docs/spec/active/2025-12-18-memory-capture-plugin/: PROGRESS.md
docs/spec/active/2025-12-19-hook-based-memory-capture/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  RESEARCH_NOTES.md
docs/spec/active/2025-12-19-hook-enhancement-v2/: CHANGELOG.md  DECISIONS.md  HOOK_ENHANCEMENT_PLAN.md  PROGRESS.md  REQUIREMENTS.md
docs/spec/active/2025-12-25-fix-git-notes-fetch-refspec/: APPROVAL_RECORD.md  ARCHITECTURE.md  CHANGELOG.md  PROGRESS.md  README.md
docs/spec/active/2025-12-25-llm-subconsciousness/: ARCHITECTURE.md  CHANGELOG.md  PROGRESS.md  README.md
docs/spec/active/2025-12-25-multi-domain-memories/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md
docs/spec/active/2025-12-25-observability-instrumentation/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md
docs/spec/active/2025-12-25-secrets-filtering/: ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  PROGRESS.md  (+2 more)
hooks/: bootstrap.py  hooks.json  posttooluse.py  precompact.py  run-hook.sh  session_start.py  sessionstart.py  stop.py  user_prompt.py  userpromptsubmit.py
scripts/: health.py  metrics.py  traces.py
skills/memory-assistant/: SKILL.md
skills/memory-assistant/examples/: decision-capture-example.py  proactive-recall-example.py  session-workflow-example.py
skills/memory-assistant/references/: capture-patterns.md  memory-workflow.md  recall-strategies.md
skills/memory-recall/: SKILL.md
skills/memory-recall/examples/: auto-recall.py  filtered-search.py
skills/memory-recall/references/: namespace-guide.md  search-optimization.md
src/git_notes_memory/: __init__.py  capture.py  config.py  embedding.py  exceptions.py  git_ops.py  index.py  models.py  note_parser.py  patterns.py  recall.py  registry.py  sync.py
src/git_notes_memory/hooks/: __init__.py  capture_decider.py  config_loader.py  context_builder.py  domain_extractor.py  guidance_builder.py  hook_utils.py  models.py  namespace_parser.py  namespace_styles.py  novelty_checker.py  post_tool_use_handler.py  pre_compact_handler.py  project_detector.py  session_analyzer.py  session_start_handler.py  signal_detector.py  stop_handler.py  user_prompt_handler.py  xml_formatter.py
src/git_notes_memory/index/: __init__.py  hybrid_search.py  rrf_fusion.py  schema_manager.py  search_engine.py  service.py
src/git_notes_memory/observability/: __init__.py  config.py  decorators.py  logging.py  metrics.py  persistent_metrics.py  session.py  tracing.py
src/git_notes_memory/retrieval/: __init__.py  config.py
src/git_notes_memory/security/: __init__.py  allowlist.py  audit.py  config.py  detector.py  exceptions.py  models.py  pii.py  redactor.py  service.py
src/git_notes_memory/subconsciousness/: __init__.py  adversarial_detector.py  batcher.py  capture_store.py  config.py  hook_integration.py  implicit_capture_agent.py  implicit_capture_service.py  llm_client.py  models.py  prompts.py  rate_limiter.py  transcript_chunker.py
tests/: conftest.py  test_capture.py  test_capture_decider.py  test_config.py  test_context_builder.py  test_domain_extractor.py  test_e2e_commands.py  test_e2e_hooks.py  test_embedding.py  test_git_ops.py  test_guidance_builder.py  test_hook_handlers.py  test_hook_integration.py  test_hook_utils.py  test_hooks.py  test_hooks_integration.py  test_hooks_performance.py  test_index.py  test_init.py  test_main.py  test_models.py  test_namespace_parser.py  test_post_tool_use_handler.py  test_pre_compact_handler.py  test_recall.py  test_session_analyzer.py  test_signal_detector.py  test_sync.py
tests/commands/: __init__.py  test_secrets_commands.py
tests/fixtures/hook_testing/: README.md
tests/hooks/: test_novelty_checker.py  test_xml_formatter.py
tests/index/: __init__.py  test_hybrid_search.py  test_rrf_fusion.py
tests/retrieval/: __init__.py  test_config.py
tests/security/: __init__.py  test_allowlist.py  test_audit.py  test_capture_integration.py  test_config.py  test_detector.py  test_integration.py  test_performance.py  test_pii.py  test_redactor.py  test_service.py
tests/subconsciousness/: __init__.py  test_adversarial.py  test_adversarial_detector.py  test_batcher.py  test_capture_store.py  test_circuit_breaker.py  test_config.py  test_hook_integration.py  test_implicit_capture_agent.py  test_implicit_capture_service.py  test_integration.py  test_llm_secrets_filtering.py  test_models.py  test_prompts.py  test_providers.py  test_rate_limiter.py  test_transcript_chunker.py
tests/test_observability/: __init__.py  test_config.py  test_decorators.py  test_exporters.py  test_logging.py  test_metrics.py  test_otlp_exporter.py  test_session.py  test_tracing.py
(+86 files in other folders)
